# fencing-sport-lib

./: Cargo.toml  LICENSE
src/: bout.rs  cards.rs  fencer.rs  lib.rs  pools.rs
src/bout/: mod.rs  score.rs  versus.rs  winner.rs
src/organizations/: mod.rs  pool_bout_orders.rs  usafencing.rs
src/organizations/usafencing/: club.rs  fencer.rs  mod.rs  pool_bout_orders.rs
src/pools/: bout_creation.rs  deserializer_struct.rs  mod.rs  placement.rs  pool_error.rs  result.rs  serializer_structs.rs
