[package]
name = "fencing-sport-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.4.0"
email_address = "0.2.4"
indexmap = { version = "2.2.6", features = ["std", "serde"] }
phonenumber = "0.3.6"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["std", "derive"] }
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["macros", "serde"] }
time-macros = "0.2.18"
